<resources>
    <string name="app_name">ShoppingList</string>
    <string name="shopping_mode">Shopping mode</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="scan_code_title_dialog">Is it your barcode number?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="no_team_information">You are not assigned to any team</string>
    <string name="dont_have_account_text">You can register!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="information">On your shopping list you have /s positions</string>
    <string name="private_list">Your list:</string>
    <string name="team_list">Team list:</string>
    <string name="selectedItem">selectedItem</string>
    <string name="itemExists">Your shopping basket already contains this item:</string>
    <string name="addItemToShoppingBasket">Add the item to shopping button: </string>
    <string name="your_web_client_id">AIzaSyCeNmeNjwY5eXS56KGzcT23AECt0-RtGIU</string>
</resources>